# tg-antispam

./: Cargo.toml  LICENSE-MIT  README.md  convert_onnx.py
src/: activations.rs  attention.rs  bert.rs  bert_classifier.rs  dataset.rs  dropout.rs  freeze.rs  lib.rs  optimizer.rs  tokenizer.rs  training_progress.rs
training/: Cargo.toml  prepare-example.toml  train-example.toml
training/src/: lib.rs
