[package]
name = "tg_antispam"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
hdrhistogram = { version = "7.5.4", default-features = false }
itertools = "0.13.0"
owo-colors = "4.1.0"
parking_lot = "0.12.3"
plotters = { version = "0.3.7", default-features = false, features = [
    "bitmap_backend",
    "bitmap_encoder",
    "line_series",
], optional = true }
rand = { version = "0.8.5" }
rayon = "1.10.0"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
snafu = { version = "0.8.4" }
tch = "0.16.0"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde"] }
tokenizers = "0.20.0"
toml = "0.8.19"
tracing = "0.1.40"
walkdir = "2.5.0"


[features]
default = ["plotters"]
plotters = ["dep:plotters"]
fontconfig-dlopen = ["plotters", "plotters/fontconfig-dlopen", "plotters/ttf"]

[workspace]
members = ["training"]
